--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "test1",
+  "name": "test11",
   "version": "0.1.4",
   "description": "A Vue spa project",
   "scripts": {
     "test": "jest",
+    "smoke": "jest --collectCoverage=false ./tests/smoke/*.spec.js",
     "release": "npm run build && npm run smoke && standard-version",
-    "lint": "eslint --fix --ext .js --ext .vue src",
+    "lint": "eslint --ext .js --ext .vue src",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.js",
     "start": "cross-env npm run build && cross-env node build/webpack.start.js",
     "build": "cross-env NODE_ENV=production ENVIRONMENT=prod webpack --config ./build/webpack.prod.js",
@@ -29,20 +30,29 @@
   ],
   "author": "zhangjingguo_19080088 <zhangjingguo@shinho.net.cn>",
   "dependencies": {
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-loader": "^8.0.6",
     "@babel/core": "^7.6.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
+    "@types/jest": "^26.0.5",
+    "@types/webpack-env": "^1.15.2",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-loader": "^8.0.6",
     "compression-webpack-plugin": "^4.0.0",
+    "eslint": "^6.8.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^4.2.0",
+    "fork-ts-checker-webpack-plugin": "^5.0.9",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "glob-all": "^3.2.1",
     "html-webpack-plugin": "^3.2.0",
     "koa-bodyparser": "^4.3.0",
+    "rimraf": "^3.0.2",
     "thread-loader": "^2.1.3",
+    "ts-jest": "^26.1.3",
+    "ts-loader": "^8.0.1",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.7",
     "vue": "^2.6.10",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12",
@@ -54,7 +64,7 @@
     "hooks": {
       "pre-commit": "lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-push": "echo 提交代码前需要先进行单元测试 && npm run test"
+      "pre-push": "echo 提交代码前需要先进行单元测试 && npm run build && npm run smoke"
     }
   },
   "lint-staged": {
