--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.4",
   "description": "A Vue spa project",
   "scripts": {
-    "test": "jest",
-    "smoke": "jest --collectCoverage=false ./tests/smoke/*.spec.js",
-    "release": "npm run build && npm run smoke && standard-version",
-    "lint": "eslint --ext .js --ext .vue src",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.js",
+    "test": "npm run build && jest",
+    "smoke": "npm run build && jest --collectCoverage=false ./tests/smoke/*.spec.js",
+    "lint": "eslint --cache --ext .js --ext .vue src",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --watch --config build/webpack.dev.js",
     "start": "cross-env npm run build && cross-env node build/webpack.start.js",
     "build": "cross-env NODE_ENV=production ENVIRONMENT=prod webpack --config ./build/webpack.prod.js",
     "build:prod": "cross-env NODE_ENV=production ENVIRONMENT=prod webpack --config ./build/webpack.prod.js",
