--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "npm run build && jest",
     "smoke": "npm run build && jest --collectCoverage=false ./tests/smoke/*.spec.js",
     "lint": "eslint --cache --ext .js --ext .vue src",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --watch --config build/webpack.dev.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.js",
     "start": "cross-env npm run build && cross-env node build/webpack.start.js",
     "build": "cross-env NODE_ENV=production ENVIRONMENT=prod webpack --config ./build/webpack.prod.js",
     "build:prod": "cross-env NODE_ENV=production ENVIRONMENT=prod webpack --config ./build/webpack.prod.js",
