--- a/package.json
+++ b/package.json
@@ -6,13 +6,9 @@
     "test": "npm run build && jest",
     "smoke": "npm run build && jest --collectCoverage=false ./tests/smoke/*.spec.js",
     "lint": "eslint --cache --ext .js --ext .vue src",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --watch --config build/webpack.dev.js",
     "start": "cross-env npm run build && cross-env node build/webpack.start.js",
     "build": "cross-env NODE_ENV=production ENVIRONMENT=prod webpack --config ./build/webpack.prod.js",
-    "build:prod": "cross-env NODE_ENV=production ENVIRONMENT=prod webpack --config ./build/webpack.prod.js",
-    "build:sit": "cross-env NODE_ENV=production ENVIRONMENT=sit webpack --config ./build/webpack.prod.js",
-    "build:uat": "cross-env NODE_ENV=production ENVIRONMENT=uat webpack --config ./build/webpack.prod.js",
-    "build:pre": "cross-env NODE_ENV=production ENVIRONMENT=pre webpack --config ./build/webpack.prod.js",
     "analyzer": "cross-env NODE_ENV=production webpack --config ./build/webpack.analyzer.js"
   },
   "repository": {
@@ -78,49 +74,46 @@
     }
   },
   "devDependencies": {
-    "husky": "^2.7.0",
-    "lint-staged": "^10.2.11",
-    "cz-conventional-changelog": "^3.2.0",
-    "commitizen": "^4.1.2",
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-angular": "^9.1.1",
-    "standard-version": "^8.0.2",
+    "@vue/test-utils": "^1.0.0-beta.33",
     "autoprefixer": "^9.6.1",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^25.4.0",
     "cache-loader": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "commitizen": "^4.1.2",
     "copy-webpack-plugin": "^5.0.4",
     "cross-env": "^7.0.2",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
-    "node-notifier": "^6.0.0",
-    "babel-eslint": "^10.1.0",
+    "cz-conventional-changelog": "^3.2.0",
     "eslint": "^6.8.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-plugin-vue": "^6.2.2",
-    "eslint-plugin-vue-libs": "^4.0.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-standard": "^4.0.1",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue-libs": "^4.0.0",
     "glob": "^7.1.6",
     "happypack": "^5.0.1",
     "hard-source-webpack-plugin": "^0.13.1",
+    "husky": "^2.7.0",
     "image-webpack-loader": "^6.0.0",
-    "babel-jest": "^25.4.0",
     "jest": "^25.4.0",
     "jest-serializer-vue": "^2.0.2",
     "jest-transform-stub": "^2.0.0",
-    "vue-jest": "^3.0.5",
-    "vue-test-utils": "^1.0.0-beta.11",
-    "@vue/test-utils": "^1.0.0-beta.33",
     "koa": "^2.13.0",
     "koa-router": "^9.1.0",
     "koa-static": "^5.0.0",
     "less": "^3.12.0",
     "less-loader": "^6.2.0",
+    "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-notifier": "^6.0.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-flexbugs-fixes": "^4.1.0",
@@ -131,19 +124,23 @@
     "sass-loader": "^8.0.0",
     "sass-resources-loader": "^2.0.3",
     "speed-measure-webpack-plugin": "^1.3.3",
+    "standard-version": "^8.0.2",
     "style-loader": "^1.0.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "terser-webpack-plugin": "^3.0.6",
     "url-loader": "^2.1.0",
     "vue-class-component": "^7.2.4",
+    "vue-jest": "^3.0.5",
     "vue-loader": "^15.7.1",
     "vue-property-decorator": "^9.0.0",
     "vue-router": "^3.3.4",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
+    "vue-test-utils": "^1.0.0-beta.11",
     "vuex": "^3.5.1",
-    "webpack-bundle-analyzer": "^3.8.0"
+    "webpack-bundle-analyzer": "^3.8.0",
+    "yargs": "^15.4.1"
   },
   "engines": {
     "node": ">= 6.0.0",
