--- a/template/package.json
+++ b/template/package.json
@@ -36,17 +36,17 @@
   ],
   "author": "{{ author }}",
   "dependencies": {
+    "babel-loader": "^8.0.6",
     "@babel/core": "^7.6.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
-    "babel-loader": "^8.0.6",
-    {{#vuex}}
-    "vuex": "^3.5.1",
-    {{/vuex}}
     {{#router}}
     "vue-router": "^3.3.4",
     {{/router}}
+    {{#vuex}}
+    "vuex": "^3.5.1",
+    {{/vuex}}
     {{#tsConfig}}
     "typescript": "^3.9.7",
     "ts-loader": "^8.0.1",
@@ -69,7 +69,12 @@
     "html-webpack-plugin": "^3.2.0",
     "koa-bodyparser": "^4.3.0",
     "thread-loader": "^2.1.3",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "webpack": "^4.44.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.2.2",
+    "workbox-webpack-plugin": "^5.1.1"
   },
   {{#commitLint}}
   "husky": {
@@ -168,12 +173,7 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
     "webpack-bundle-analyzer": "^3.8.0",
-    "yargs": "^15.4.1",
-    "webpack": "^4.44.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2",
-    "workbox-webpack-plugin": "^5.1.1"
+    "yargs": "^15.4.1"
   },
   "engines": {
     "node": ">= 6.0.0",
